mcpclient-spiffe/envoy-config.yaml
apiVersion: v1
data:
  deepwiki_calculator_k8s_spiffe.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10001
        filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match:
                        path: "/mcp-server1/mcp"
                      route:
                        weighted_clusters:
                          clusters:
                            - name: mcp-server1
                              weight: 100
                              typed_per_filter_config:
                                envoy.filters.http.rbac:
                                  "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                                  rbac:
                                    rules:
                                      action: ALLOW
                                      policies:
                                        "allow-mcp-session-close":
                                          principals:
                                            # Both of the following conditions must be true for the request to match
                                            - and_ids:
                                                ids:
                                                  # Condition 1: The HTTP method must be DELETE
                                                  - header:
                                                      name: ":method"
                                                      string_match:
                                                        exact: "DELETE"
                                                  # Condition 2: The 'mcp-session-id' header must exist
                                                  - header:
                                                      name: "mcp-session-id"
                                                      present_match: true
                                          permissions:
                                            # If the principal (the request's identity) matches, allow it
                                            - any: true
                                        "allow-initialize-and-list-tool":
                                          principals:
                                          - any: true
                                          permissions:
                                          - and_rules:
                                              rules:
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "method"
                                                    value:
                                                      or_match:
                                                        value_matchers:
                                                        - string_match:
                                                            exact: "initialize"
                                                        - string_match:
                                                            exact: "notifications/initialized"
                                                        - string_match:
                                                            exact: "tools/list"
                                        "rule-0":
                                          principals:
                                          - or_ids:
                                              ids:
                                              - header:
                                                  name: "x-user-role"
                                                  string_match:
                                                    exact: "spiffe://my.trust.domain/ns/agent-spiffe/sa/sa1"
                                          permissions:
                                          - and_rules:
                                              rules:
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "method"
                                                    value:
                                                      string_match:
                                                        exact: "tools/call"
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "params"
                                                      - key: "name"
                                                    value:
                                                      or_match:
                                                        value_matchers:
                                                        - string_match:
                                                            exact: "add"
                                                        - string_match:
                                                            exact: "subtract"
                                        "rule-1":
                                          principals:
                                          - or_ids:
                                              ids:
                                              - header:
                                                  name: "x-user-role"
                                                  string_match:
                                                    exact: "system:serviceaccount:agent:sa2"
                                          permissions:
                                          - and_rules:
                                              rules:
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "method"
                                                    value:
                                                      string_match:
                                                        exact: "tools/call"
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "params"
                                                      - key: "name"
                                                    value:
                                                      string_match:
                                                        exact: "subtract"
                        prefix_rewrite: "/mcp"
                    - match:
                        path: "/mcp-server2/mcp"
                      route:
                        weighted_clusters:
                          clusters:
                            - name: mcp-server2
                              weight: 100
                              typed_per_filter_config:
                                envoy.filters.http.rbac:
                                  "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                                  rbac:
                                    rules:
                                      action: ALLOW
                                      policies:
                                        "allow-mcp-session-close":
                                          principals:
                                            # Both of the following conditions must be true for the request to match
                                            - and_ids:
                                                ids:
                                                  # Condition 1: The HTTP method must be DELETE
                                                  - header:
                                                      name: ":method"
                                                      string_match:
                                                        exact: "DELETE"
                                                  # Condition 2: The 'mcp-session-id' header must exist
                                                  - header:
                                                      name: "mcp-session-id"
                                                      present_match: true
                                          permissions:
                                            # If the principal (the request's identity) matches, allow it
                                            - any: true
                                        "allow-initialize-and-list-tool":
                                          principals:
                                          - any: true
                                          permissions:
                                          - and_rules:
                                              rules:
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "method"
                                                    value:
                                                      or_match:
                                                        value_matchers:
                                                        - string_match:
                                                            exact: "initialize"
                                                        - string_match:
                                                            exact: "notifications/initialized"
                                                        - string_match:
                                                            exact: "tools/list"
                                        "rule-0":
                                          principals:
                                          - or_ids:
                                              ids:
                                              - header:
                                                  name: "x-user-role"
                                                  string_match:
                                                    exact: "system:serviceaccount:agent:sa2"
                                          permissions:
                                          - and_rules:
                                              rules:
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "method"
                                                    value:
                                                      string_match:
                                                        exact: "tools/call"
                                              - sourced_metadata:
                                                  metadata_matcher:
                                                    filter: "mcp_proxy"
                                                    path:
                                                      - key: "params"
                                                      - key: "name"
                                                    value:
                                                      string_match:
                                                        exact: "read_wiki_structure"
                        prefix_rewrite: "/mcp"
                        # The host header will be rewritten to the upstream's hostname
                        host_rewrite_literal: mcp.deepwiki.com
                http_filters:
                - name: envoy.filters.http.mcp
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.mcp.v3.Mcp
                - name: envoy.filters.http.rbac
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                  # Reference the names defined in the sds_resources block below
                  tls_certificate_sds_secret_configs:
                  - name: spiffe_identity
                  validation_context_sds_secret_config:
                    name: spiffe_trust
                require_client_certificate: true

        # This is where we "fold" the SDS definitions into the main config
        inline_sds_resources:
        - name: spiffe_identity
          tls_certificate:
            certificate_chain:
              filename: /var/run/secrets/spiffe.io/tls.crt
            private_key:
              filename: /var/run/secrets/spiffe.io/tls.key
        - name: spiffe_trust
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/trust-bundle.pem

      clusters:
      - name: mcp-server1
        type: STRICT_DNS
        load_assignment:
          cluster_name: mcp-server1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: server1-svc.mcp-server-calculator-system.svc.cluster.local
                    port_value: 9000
      - name: mcp-server2
        type: LOGICAL_DNS
        load_assignment:
          cluster_name: mcp-server2
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: mcp.deepwiki.com
                    port_value: 443
        transport_socket:     # Added this section to enable TLS for HTTPS
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: mcp.deepwiki.com # Server Name Indication is required for TLS handshake

    # Folded SDS Resources defined at the root of the config
    layered_runtime:
      layers:
        - name: static_layer_0
          static_layer:
            envoy.restart_features.use_apple_api_for_dns_lookups: true

    # The "Secrets" are defined here as top-level resources
    bootstrap_extensions: []

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9002
kind: ConfigMap
metadata:
  creationTimestamp: "2025-12-18T15:27:50Z"
  name: envoy-config
  namespace: envoy-gateway-system
  resourceVersion: "1766071670947231023"
  uid: c7c321e5-76b0-4d59-832d-a8f4cf8278d2
