mcpclient-spiffe/k8s_resources_agent1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent1
  namespace: agent-spiffe
  labels:
    app: agent1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent1
  template:
    metadata:
      labels:
        app: agent1
    spec:
      containers:
      - name: mcp-agent
        image: docker.io/hmeng/agent-spiffe:v4
        imagePullPolicy: Always
        env:
        - name: MCP_SERVER_URL
          value: "https://envoy-service.envoy-gateway-system.svc.cluster.local:10001"
        command: ["/bin/sh", "-c", "python -u agent.py && sleep infinity"]
        # Add resource limits and requests as appropriate for your environment
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        volumeMounts:
          - mountPath: "/var/run/secrets/spiffe.io"
            name: spiffe
          # Standard location for many Linux distros to look for CA certs
          - name: cert-bundle
            mountPath: /etc/ssl/certs/trust-bundle.pem
            subPath: trust-bundle.pem
            readOnly: true
      volumes:
        - name: spiffe
          csi:
            driver: spiffe.csi.cert-manager.io
            readOnly: true
        - name: cert-bundle
          configMap:
            name: example-bundle  # Must match the Bundle's metadata.name
      serviceAccountName: sa1
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa1
  namespace: agent-spiffe
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: cert-manager-requester
  namespace: agent-spiffe
rules:
- apiGroups: ["cert-manager.io"]
  resources: ["certificaterequests"]
  verbs: ["create"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: sa1-cert-manager-requester
  namespace: agent-spiffe
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: cert-manager-requester
subjects:
- kind: ServiceAccount
  name: sa1
  namespace: agent-spiffe
